mml.output
Terminals unused in grammar

   NOTE
   DIRECTIVE_NAME
   MML_AT


State 105 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input declaration

    3 declaration: directive
    4            | mmldata
    5            | opmdef

    6 directive: '#' whitespace_optional IDENTIFIER whitespace STRING_LITERAL whitespace_optional '\n'
    7          | '#' whitespace_optional IDENTIFIER whitespace_optional '\n'

    8 opmdef: '@' INT '=' '{' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT '}'

    9 mmldata: MMLCHANNELS mmlcommands '\n'

   10 mmlcommands: %empty
   11            | mmlcommand mmlcommands

   12 mmlnote: MML_NOTE
   13        | MML_NOTE '-'
   14        | MML_NOTE '+'

   15 mmlcommand: mmlnote notelen
   16           | 't' INT
   17           | 'o' INT
   18           | '<'
   19           | '>'
   20           | 'n' INT ',' notelen
   21           | 'n' INT
   22           | 'l' INT
   23           | 'r' notelen
   24           | 'q' staccato
   25           | '@' 'q' staccato
   26           | '_'
   27           | '&'
   28           | 'v' INT
   29           | '@' 't' INT
   30           | '@' 'v' INT
   31           | '@' INT
   32           | '!'
   33           | '('
   34           | ')'
   35           | 'p' INT
   36           | 'k' INT
   37           | 'L'
   38           | 'D' INT
   39           | 'w' INT
   40           | 'y' INT ',' INT
   41           | 'S' INT
   42           | 'W'
   43           | 'F' INT
   44           | MH INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT
   45           | MHON
   46           | MHOF
   47           | MA INT ',' INT ',' INT
   48           | MAON
   49           | MAOF
   50           | MP INT ',' INT ',' INT
   51           | MPON
   52           | MPOF
   53           | MD INT

   54 notelen: notelendiv
   55        | '%' INT
   56        | notelen '^' notelen

   57 notelendiv: %empty
   58           | INT
   59           | notelendiv '.'

   60 staccato: INT
   61         | '%' INT

   62 whitespace: WHITESPACE

   63 whitespace_optional: %empty
   64                    | whitespace


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 6 7 9
'!' (33) 32
'#' (35) 6 7
'%' (37) 55 61
'&' (38) 27
'(' (40) 33
')' (41) 34
'+' (43) 14
',' (44) 8 20 40 44 47 50
'-' (45) 13
'.' (46) 59
'<' (60) 18
'=' (61) 8
'>' (62) 19
'@' (64) 8 25 29 30 31
'D' (68) 38
'F' (70) 43
'L' (76) 37
'S' (83) 41
'W' (87) 42
'^' (94) 56
'_' (95) 26
'k' (107) 36
'l' (108) 22
'n' (110) 20 21
'o' (111) 17
'p' (112) 35
'q' (113) 24 25
'r' (114) 23
't' (116) 16 29
'v' (118) 28 30
'w' (119) 39
'y' (121) 40
'{' (123) 8
'}' (125) 8
error (256)
INT (258) 8 16 17 20 21 22 28 29 30 31 35 36 38 39 40 41 43 44 47 50
    53 55 58 60 61
NOTE (259)
DIRECTIVE_NAME (260)
IDENTIFIER (261) 6 7
MMLCHANNELS (262) 9
MML_NOTE (263) 12 13 14
MML_AT (264)
WHITESPACE (265) 62
STRING_LITERAL (266) 6
MP (267) 50
MPON (268) 51
MPOF (269) 52
MA (270) 47
MAON (271) 48
MAOF (272) 49
MD (273) 53
MH (274) 44
MHON (275) 45
MHOF (276) 46


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
input (58)
    on left: 1 2, on right: 0 2
declaration (59)
    on left: 3 4 5, on right: 2
directive (60)
    on left: 6 7, on right: 3
opmdef (61)
    on left: 8, on right: 5
mmldata (62)
    on left: 9, on right: 4
mmlcommands (63)
    on left: 10 11, on right: 9 11
mmlnote (64)
    on left: 12 13 14, on right: 15
mmlcommand (65)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53,
    on right: 11
notelen (66)
    on left: 54 55 56, on right: 15 20 23 56
notelendiv (67)
    on left: 57 58 59, on right: 54 59
staccato (68)
    on left: 60 61, on right: 24 25
whitespace (69)
    on left: 62, on right: 6 64
whitespace_optional (70)
    on left: 63 64, on right: 6 7


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . declaration

    $end         shift, and go to state 2
    MMLCHANNELS  shift, and go to state 3
    '#'          shift, and go to state 4
    '@'          shift, and go to state 5

    declaration  go to state 6
    directive    go to state 7
    opmdef       go to state 8
    mmldata      go to state 9


State 2

    0 $accept: input $end .

    $default  accept


State 3

    9 mmldata: MMLCHANNELS . mmlcommands '\n'

    MML_NOTE  shift, and go to state 10
    MP        shift, and go to state 11
    MPON      shift, and go to state 12
    MPOF      shift, and go to state 13
    MA        shift, and go to state 14
    MAON      shift, and go to state 15
    MAOF      shift, and go to state 16
    MD        shift, and go to state 17
    MH        shift, and go to state 18
    MHON      shift, and go to state 19
    MHOF      shift, and go to state 20
    '@'       shift, and go to state 21
    't'       shift, and go to state 22
    'o'       shift, and go to state 23
    '<'       shift, and go to state 24
    '>'       shift, and go to state 25
    'n'       shift, and go to state 26
    'l'       shift, and go to state 27
    'r'       shift, and go to state 28
    'q'       shift, and go to state 29
    '_'       shift, and go to state 30
    '&'       shift, and go to state 31
    'v'       shift, and go to state 32
    '!'       shift, and go to state 33
    '('       shift, and go to state 34
    ')'       shift, and go to state 35
    'p'       shift, and go to state 36
    'k'       shift, and go to state 37
    'L'       shift, and go to state 38
    'D'       shift, and go to state 39
    'w'       shift, and go to state 40
    'y'       shift, and go to state 41
    'S'       shift, and go to state 42
    'W'       shift, and go to state 43
    'F'       shift, and go to state 44

    $default  reduce using rule 10 (mmlcommands)

    mmlcommands  go to state 45
    mmlnote      go to state 46
    mmlcommand   go to state 47


State 4

    6 directive: '#' . whitespace_optional IDENTIFIER whitespace STRING_LITERAL whitespace_optional '\n'
    7          | '#' . whitespace_optional IDENTIFIER whitespace_optional '\n'

    WHITESPACE  shift, and go to state 48

    $default  reduce using rule 63 (whitespace_optional)

    whitespace           go to state 49
    whitespace_optional  go to state 50


State 5

    8 opmdef: '@' . INT '=' '{' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT '}'

    INT  shift, and go to state 51


State 6

    2 input: input declaration .

    $default  reduce using rule 2 (input)


State 7

    3 declaration: directive .

    $default  reduce using rule 3 (declaration)


State 8

    5 declaration: opmdef .

    $default  reduce using rule 5 (declaration)


State 9

    4 declaration: mmldata .

    $default  reduce using rule 4 (declaration)


State 10

   12 mmlnote: MML_NOTE .
   13        | MML_NOTE . '-'
   14        | MML_NOTE . '+'

    '-'  shift, and go to state 52
    '+'  shift, and go to state 53

    $default  reduce using rule 12 (mmlnote)


State 11

   50 mmlcommand: MP . INT ',' INT ',' INT

    INT  shift, and go to state 54


State 12

   51 mmlcommand: MPON .

    $default  reduce using rule 51 (mmlcommand)


State 13

   52 mmlcommand: MPOF .

    $default  reduce using rule 52 (mmlcommand)


State 14

   47 mmlcommand: MA . INT ',' INT ',' INT

    INT  shift, and go to state 55


State 15

   48 mmlcommand: MAON .

    $default  reduce using rule 48 (mmlcommand)


State 16

   49 mmlcommand: MAOF .

    $default  reduce using rule 49 (mmlcommand)


State 17

   53 mmlcommand: MD . INT

    INT  shift, and go to state 56


State 18

   44 mmlcommand: MH . INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT

    INT  shift, and go to state 57


State 19

   45 mmlcommand: MHON .

    $default  reduce using rule 45 (mmlcommand)


State 20

   46 mmlcommand: MHOF .

    $default  reduce using rule 46 (mmlcommand)


State 21

   25 mmlcommand: '@' . 'q' staccato
   29           | '@' . 't' INT
   30           | '@' . 'v' INT
   31           | '@' . INT

    INT  shift, and go to state 58
    't'  shift, and go to state 59
    'q'  shift, and go to state 60
    'v'  shift, and go to state 61


State 22

   16 mmlcommand: 't' . INT

    INT  shift, and go to state 62


State 23

   17 mmlcommand: 'o' . INT

    INT  shift, and go to state 63


State 24

   18 mmlcommand: '<' .

    $default  reduce using rule 18 (mmlcommand)


State 25

   19 mmlcommand: '>' .

    $default  reduce using rule 19 (mmlcommand)


State 26

   20 mmlcommand: 'n' . INT ',' notelen
   21           | 'n' . INT

    INT  shift, and go to state 64


State 27

   22 mmlcommand: 'l' . INT

    INT  shift, and go to state 65


State 28

   23 mmlcommand: 'r' . notelen

    INT  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 57 (notelendiv)

    notelen     go to state 68
    notelendiv  go to state 69


State 29

   24 mmlcommand: 'q' . staccato

    INT  shift, and go to state 70
    '%'  shift, and go to state 71

    staccato  go to state 72


State 30

   26 mmlcommand: '_' .

    $default  reduce using rule 26 (mmlcommand)


State 31

   27 mmlcommand: '&' .

    $default  reduce using rule 27 (mmlcommand)


State 32

   28 mmlcommand: 'v' . INT

    INT  shift, and go to state 73


State 33

   32 mmlcommand: '!' .

    $default  reduce using rule 32 (mmlcommand)


State 34

   33 mmlcommand: '(' .

    $default  reduce using rule 33 (mmlcommand)


State 35

   34 mmlcommand: ')' .

    $default  reduce using rule 34 (mmlcommand)


State 36

   35 mmlcommand: 'p' . INT

    INT  shift, and go to state 74


State 37

   36 mmlcommand: 'k' . INT

    INT  shift, and go to state 75


State 38

   37 mmlcommand: 'L' .

    $default  reduce using rule 37 (mmlcommand)


State 39

   38 mmlcommand: 'D' . INT

    INT  shift, and go to state 76


State 40

   39 mmlcommand: 'w' . INT

    INT  shift, and go to state 77


State 41

   40 mmlcommand: 'y' . INT ',' INT

    INT  shift, and go to state 78


State 42

   41 mmlcommand: 'S' . INT

    INT  shift, and go to state 79


State 43

   42 mmlcommand: 'W' .

    $default  reduce using rule 42 (mmlcommand)


State 44

   43 mmlcommand: 'F' . INT

    INT  shift, and go to state 80


State 45

    9 mmldata: MMLCHANNELS mmlcommands . '\n'

    '\n'  shift, and go to state 81


State 46

   15 mmlcommand: mmlnote . notelen

    INT  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 57 (notelendiv)

    notelen     go to state 82
    notelendiv  go to state 69


State 47

   11 mmlcommands: mmlcommand . mmlcommands

    MML_NOTE  shift, and go to state 10
    MP        shift, and go to state 11
    MPON      shift, and go to state 12
    MPOF      shift, and go to state 13
    MA        shift, and go to state 14
    MAON      shift, and go to state 15
    MAOF      shift, and go to state 16
    MD        shift, and go to state 17
    MH        shift, and go to state 18
    MHON      shift, and go to state 19
    MHOF      shift, and go to state 20
    '@'       shift, and go to state 21
    't'       shift, and go to state 22
    'o'       shift, and go to state 23
    '<'       shift, and go to state 24
    '>'       shift, and go to state 25
    'n'       shift, and go to state 26
    'l'       shift, and go to state 27
    'r'       shift, and go to state 28
    'q'       shift, and go to state 29
    '_'       shift, and go to state 30
    '&'       shift, and go to state 31
    'v'       shift, and go to state 32
    '!'       shift, and go to state 33
    '('       shift, and go to state 34
    ')'       shift, and go to state 35
    'p'       shift, and go to state 36
    'k'       shift, and go to state 37
    'L'       shift, and go to state 38
    'D'       shift, and go to state 39
    'w'       shift, and go to state 40
    'y'       shift, and go to state 41
    'S'       shift, and go to state 42
    'W'       shift, and go to state 43
    'F'       shift, and go to state 44

    $default  reduce using rule 10 (mmlcommands)

    mmlcommands  go to state 83
    mmlnote      go to state 46
    mmlcommand   go to state 47


State 48

   62 whitespace: WHITESPACE .

    $default  reduce using rule 62 (whitespace)


State 49

   64 whitespace_optional: whitespace .

    $default  reduce using rule 64 (whitespace_optional)


State 50

    6 directive: '#' whitespace_optional . IDENTIFIER whitespace STRING_LITERAL whitespace_optional '\n'
    7          | '#' whitespace_optional . IDENTIFIER whitespace_optional '\n'

    IDENTIFIER  shift, and go to state 84


State 51

    8 opmdef: '@' INT . '=' '{' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT '}'

    '='  shift, and go to state 85


State 52

   13 mmlnote: MML_NOTE '-' .

    $default  reduce using rule 13 (mmlnote)


State 53

   14 mmlnote: MML_NOTE '+' .

    $default  reduce using rule 14 (mmlnote)


State 54

   50 mmlcommand: MP INT . ',' INT ',' INT

    ','  shift, and go to state 86


State 55

   47 mmlcommand: MA INT . ',' INT ',' INT

    ','  shift, and go to state 87


State 56

   53 mmlcommand: MD INT .

    $default  reduce using rule 53 (mmlcommand)


State 57

   44 mmlcommand: MH INT . ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT

    ','  shift, and go to state 88


State 58

   31 mmlcommand: '@' INT .

    $default  reduce using rule 31 (mmlcommand)


State 59

   29 mmlcommand: '@' 't' . INT

    INT  shift, and go to state 89


State 60

   25 mmlcommand: '@' 'q' . staccato

    INT  shift, and go to state 70
    '%'  shift, and go to state 71

    staccato  go to state 90


State 61

   30 mmlcommand: '@' 'v' . INT

    INT  shift, and go to state 91


State 62

   16 mmlcommand: 't' INT .

    $default  reduce using rule 16 (mmlcommand)


State 63

   17 mmlcommand: 'o' INT .

    $default  reduce using rule 17 (mmlcommand)


State 64

   20 mmlcommand: 'n' INT . ',' notelen
   21           | 'n' INT .

    ','  shift, and go to state 92

    $default  reduce using rule 21 (mmlcommand)


State 65

   22 mmlcommand: 'l' INT .

    $default  reduce using rule 22 (mmlcommand)


State 66

   58 notelendiv: INT .

    $default  reduce using rule 58 (notelendiv)


State 67

   55 notelen: '%' . INT

    INT  shift, and go to state 93


State 68

   23 mmlcommand: 'r' notelen .
   56 notelen: notelen . '^' notelen

    '^'  shift, and go to state 94

    $default  reduce using rule 23 (mmlcommand)


State 69

   54 notelen: notelendiv .
   59 notelendiv: notelendiv . '.'

    '.'  shift, and go to state 95

    $default  reduce using rule 54 (notelen)


State 70

   60 staccato: INT .

    $default  reduce using rule 60 (staccato)


State 71

   61 staccato: '%' . INT

    INT  shift, and go to state 96


State 72

   24 mmlcommand: 'q' staccato .

    $default  reduce using rule 24 (mmlcommand)


State 73

   28 mmlcommand: 'v' INT .

    $default  reduce using rule 28 (mmlcommand)


State 74

   35 mmlcommand: 'p' INT .

    $default  reduce using rule 35 (mmlcommand)


State 75

   36 mmlcommand: 'k' INT .

    $default  reduce using rule 36 (mmlcommand)


State 76

   38 mmlcommand: 'D' INT .

    $default  reduce using rule 38 (mmlcommand)


State 77

   39 mmlcommand: 'w' INT .

    $default  reduce using rule 39 (mmlcommand)


State 78

   40 mmlcommand: 'y' INT . ',' INT

    ','  shift, and go to state 97


State 79

   41 mmlcommand: 'S' INT .

    $default  reduce using rule 41 (mmlcommand)


State 80

   43 mmlcommand: 'F' INT .

    $default  reduce using rule 43 (mmlcommand)


State 81

    9 mmldata: MMLCHANNELS mmlcommands '\n' .

    $default  reduce using rule 9 (mmldata)


State 82

   15 mmlcommand: mmlnote notelen .
   56 notelen: notelen . '^' notelen

    '^'  shift, and go to state 94

    $default  reduce using rule 15 (mmlcommand)


State 83

   11 mmlcommands: mmlcommand mmlcommands .

    $default  reduce using rule 11 (mmlcommands)


State 84

    6 directive: '#' whitespace_optional IDENTIFIER . whitespace STRING_LITERAL whitespace_optional '\n'
    7          | '#' whitespace_optional IDENTIFIER . whitespace_optional '\n'

    WHITESPACE  shift, and go to state 48

    $default  reduce using rule 63 (whitespace_optional)

    whitespace           go to state 98
    whitespace_optional  go to state 99


State 85

    8 opmdef: '@' INT '=' . '{' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT '}'

    '{'  shift, and go to state 100


State 86

   50 mmlcommand: MP INT ',' . INT ',' INT

    INT  shift, and go to state 101


State 87

   47 mmlcommand: MA INT ',' . INT ',' INT

    INT  shift, and go to state 102


State 88

   44 mmlcommand: MH INT ',' . INT ',' INT ',' INT ',' INT ',' INT ',' INT

    INT  shift, and go to state 103


State 89

   29 mmlcommand: '@' 't' INT .

    $default  reduce using rule 29 (mmlcommand)


State 90

   25 mmlcommand: '@' 'q' staccato .

    $default  reduce using rule 25 (mmlcommand)


State 91

   30 mmlcommand: '@' 'v' INT .

    $default  reduce using rule 30 (mmlcommand)


State 92

   20 mmlcommand: 'n' INT ',' . notelen

    INT  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 57 (notelendiv)

    notelen     go to state 104
    notelendiv  go to state 69


State 93

   55 notelen: '%' INT .

    $default  reduce using rule 55 (notelen)


State 94

   56 notelen: notelen '^' . notelen

    INT  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 57 (notelendiv)

    notelen     go to state 105
    notelendiv  go to state 69


State 95

   59 notelendiv: notelendiv '.' .

    $default  reduce using rule 59 (notelendiv)


State 96

   61 staccato: '%' INT .

    $default  reduce using rule 61 (staccato)


State 97

   40 mmlcommand: 'y' INT ',' . INT

    INT  shift, and go to state 106


State 98

    6 directive: '#' whitespace_optional IDENTIFIER whitespace . STRING_LITERAL whitespace_optional '\n'
   64 whitespace_optional: whitespace .

    STRING_LITERAL  shift, and go to state 107

    $default  reduce using rule 64 (whitespace_optional)


State 99

    7 directive: '#' whitespace_optional IDENTIFIER whitespace_optional . '\n'

    '\n'  shift, and go to state 108


State 100

    8 opmdef: '@' INT '=' '{' . INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT ',' INT '}'

    INT  shift, and go to state 109


State 101

   50 mmlcommand: MP INT ',' INT . ',' INT

    ','  shift, and go to state 110


State 102

   47 mmlcommand: MA INT ',' INT . ',' INT

    ','  shift, and go to state 111


State 103

   44 mmlcommand: MH INT ',' INT . ',' INT ',' INT ',' INT ',' INT ',' INT

    ','  shift, and go to state 112


State 104

   20 mmlcommand: 'n' INT ',' notelen .
   56 notelen: notelen . '^' notelen

    '^'  shift, and go to state 94

    $default  reduce using rule 20 (mmlcommand)


State 105

   56 notelen: notelen . '^' notelen
   56        | notelen '^' notelen .

    '^'  shift, and go to state 94

    '^'       [reduce using rule 56 (notelen)]
    $default  reduce using rule 56 (notelen)


State 106

   40 mmlcommand: 'y' INT ',' INT .

    $default  reduce using rule 40 (mmlcommand)


State 107

    6 directive: '#' whitespace_optional IDENTIFIER whitespace STRING_LITERAL . whitespace_optional '\n'

    WHITESPACE  shift, and go to state 48

    $default  reduce using rule 63 (whitespace_optional)

    whitespace           go to state 49
    whitespace_optional  go to state 113


State 108

    7 directive: '#' whitespace_optional IDENTIFIER whitespace_optional '\n' .

    $default  reduce using rule 7 (directive)


State 109
